--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,47 @@
 @charset "UTF-8";
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box
+}
+
+body, html{
+    background-color: black;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../imagens/pexels-philippedonn-1257860.jpg);
+    background-size: cover;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.622);
+}
+section#login > div#imagem{
+    display: block;
+    background: black url(../imagens/pexels-junior-teixeira-1064069-2047905.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 190px;
+}
+section#login > div#form{
+    display: block;
+    padding: 10px;
+}
