--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,7 +18,7 @@ main{
     position: relative;
     height: 100vh;
     width: 100vw;
-    background-image: url(../imagens/pexels-philippedonn-1257860.jpg);
+    background-image: url(../imagens/pexels-philippedonn-1257860.jpg) no-repeat;
     background-size: cover;
 }
 
@@ -33,6 +33,8 @@ section#login{
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.622);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 section#login > div#imagem{
     display: block;
